--- a/Index.html
+++ b/Index.html
@@ -127,7 +127,7 @@
 
       
 
-      function call() {
+      ////////////////////function call() {
         var a = prompt("Enter your number", "");
         document.getElementById("result").innerHTML = a;
       } -->
