--- a/Index.html
+++ b/Index.html
@@ -109,7 +109,7 @@
       //         var res = ParseInt(opr1) - ParseInt(opr2);
       //   }
 
-      //   if(sum == '*'){
+      //,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,   if(sum == '*'){
       //         var res = ParseInt(opr1) * ParseInt(opr2);
       //   }
 
@@ -121,7 +121,7 @@
       // } -->
        
       <!-- Name : <i id="result"></i> <br><br>
-ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
+dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgi
       <button onclick="call()">call</button>
 
 
